--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.3.0"
+    "@astrojs/vue": "^5.0.6",
+    "@tailwindcss/vite": "^4.0.6",
+    "astro": "^5.3.0",
+    "canvas-confetti": "^1.9.3",
+    "lucide-vue-next": "^0.475.0",
+    "tailwindcss": "^4.0.6",
+    "vue": "^3.5.13"
   }
 }
